# godwoken

.github/workflows/: docker.yml
configs/: gw-testnet-config.toml
crates/block-producer/: Cargo.toml
crates/block-producer/src/: runner.rs
crates/challenge/src/: offchain.rs
crates/challenge/src/offchain/: verify_tx.rs
crates/config/src/: config.rs
crates/config/src/consensus/builtins/: testnet.toml
crates/generator/: Cargo.toml
crates/generator/src/: backend_manage.rs  generator.rs  pprof_machine.rs
crates/mem-pool/src/: pool.rs
crates/mem-pool/src/fee/: queue.rs
crates/replay-chain/src/: main.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: registry.rs
crates/tools/src/: get_balance.rs  main.rs  withdraw.rs
docker/: Dockerfile  Makefile
scripts/light-godwoken-cli/src/commands/: test-catch.ts
