[package]
name = "gw-generator"
version = "0.1.1"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-types = { path = "../types" }
gw-common = { path = "../common" }
gw-config = { path = "../config" }
gw-store = { path = "../store" }
gw-traits = { path = "../traits" }
anyhow = "1.0"
blake2b-rs = "0.2"
# ckb-vm = { git = "https://github.com/nervosnetwork/ckb-vm.git", tag = "0.19.1", features = ["detect-asm"] }
thiserror = "1.0"
lazy_static = "1.4"
rlp = "0.5.0"
secp256k1 = { version = "0.20", features = ["recovery"] }
sha3 = "0.9.1"
log = "0.4"
hex = "0.4"

ckb-vm-pprof = { git = "https://github.com/Flouse/ckb-vm-pprof.git", rev = "a79621cc" }
# ckb-vm-pprof = { path = "/home/flouse/.cargo/git/checkouts/ckb-vm-pprof-ae157260cd60533a/2e0cd78" }
# use the same version of vkb-vm that ckb-vm-pprof used
ckb-vm = { version = "0.20.0-rc2", features = ["detect-asm"] }
